--- a/src/index.css
+++ b/src/index.css
@@ -9,25 +9,20 @@ Global Settings
     margin: 0;
     box-sizing: border-box;
     font-family: "Century Gothic", 'Courier New', Courier, monospace;
+    color: snow;
 }
 
 #global-nav {
-    width: 100vw;
+    max-width: 100vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 5vh;
+    height: 8vh;
+    min-height: 60px;
     padding: 0 2vw;
     font-weight: bold;
     font-size: larger;
     background-color: rgb(32, 32, 32);
-}
-
-.dynamic-nav > a,
-#logo-link,
-#account-logout-links > a {
-    text-decoration: none;
-    color: deepskyblue;
 }
 
 #logo-link {
@@ -47,10 +42,27 @@ Global Settings
 }
 
 #global-footer {
-    width: 100vw;
+    max-width: 100vw;
     display: flex;
     height: 5vh;
+    font-weight: bold;
+    flex-flow: row;
     justify-content: space-evenly;
+    align-items: end;
+}
+
+body {
+    background-color: black;
+    max-width: 100vw;
+    background-image: url("/src/assets/model1887.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+a {
+    color: gold;
+    text-decoration: none;
+    text-shadow: 1px 2px 2px rgb(32, 32, 32);
 }
 
 /******END OF FILE!!!******/
